Upgrade sbt-pack to 0.22 and add Java 24 JVM options (#4029)
## Summary
- Upgraded sbt-pack plugin from 0.21 to 0.22  
- Added Java 24+ specific JVM options using the new
`packJvmVersionSpecificOpts` setting

## Changes
- Updated sbt-pack version in:
  - `project/plugin.sbt`
  - `examples/rpc-examples/hello-rpc/project/plugins.sbt`
- Added Java 24 specific JVM options for:
  - `airframe-http-codegen` 
  - `airframe-benchmark`

The following JVM options are now automatically applied when running
with Java 24+:
- `--sun-misc-unsafe-memory-access=allow`
- `--enable-native-access=ALL-UNNAMED`

These options help manage unsafe memory access and native access
warnings in Java 24.

## Test plan
- [ ] Build succeeds with existing Java versions
- [ ] Generated launch scripts include Java 24 options when appropriate
- [ ] No regression in functionality

🤖 Generated with [Claude Code](https://claude.ai/code)

---------

Co-authored-by: Claude <noreply@anthropic.com>